# QTSystemStats

./: .gitignore  CMakeLists.txt  README.md  build.sh  resources.qrc
include/: cpu_info.h  cpu_info_widget.h  disk_info.h  disk_window.h  main_window.h  memory_window.h  network_info.h  network_window.h  service_info.h  service_window.h  simple_menu_window.h  theme_manager.h  usb_window.h
src/: cpu_info.cpp  cpu_info_widget.cpp  disk_info.cpp  disk_window.cpp  main.cpp  main_window.cpp  memory_window.cpp  network_info.cpp  network_window.cpp  service_info.cpp  service_window.cpp  simple_menu_main.cpp  simple_menu_window.cpp  theme_manager.cpp  usb_window.cpp
